fixed zesty icon alignment

--- a/src/shell/components/global-actions/styles.less
+++ b/src/shell/components/global-actions/styles.less
@@ -60,7 +60,6 @@
     }
     img {
       vertical-align: middle;
-      margin-right: 4px;
     }
 
     svg {
